--- a/index.html
+++ b/index.html
@@ -499,7 +499,11 @@
     document.addEventListener('contextmenu', e => e.preventDefault());
 
   </script>
-
+<script>
+  document.addEventListener('contextmenu', function (e) {
+    e.preventDefault();
+  });
+</script>
 </body>
 
 </html>
