--- a/index.html
+++ b/index.html
@@ -1,509 +1,209 @@
 <!DOCTYPE html>
-
-<html lang="pt-br">
-
+<html lang="pt-BR">
 <head>
-
-  <meta charset="UTF-8" />
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
+  <meta charset="UTF-8">
   <title>Livres para viver</title>
-
   <style>
-
     body {
-
-      margin: 0;
-
-      font-family: Arial, sans-serif;
-
       background: url('agnosia.jpg') no-repeat center center fixed;
-
       background-size: cover;
-
-      color: white;
-
-      padding: 20px;
-
-    }
-
-
-
-    .watermark {
-
-      position: fixed;
-
-      top: 5px;
-
-      left: 5px;
-
-      color: rgba(128, 128, 128, 0.3);
-
-      font-size: 0.9em;
-
-      font-weight: bold;
-
-      z-index: 1;
-
-      pointer-events: none;
-
-    }
-
-
-
-    h1 {
-
+      color: #c0c0c0;
+      font-family: sans-serif;
+      margin: 0;
+      padding-right: 100px;
       text-align: center;
-
-      text-shadow: 2px 2px 5px black;
-
-    }
-
-
-
-    .page-container {
-
-      perspective: 1000px;
-
-      margin: 20px auto;
-
-      max-width: 800px;
-
-    }
-
-
-
-    .page {
-
-      width: 100%;
-
-      height: 300px;
-
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      box-sizing: border-box;
       position: relative;
-
-      transform-style: preserve-3d;
-
-      transition: transform 1s;
-
     }
 
-
-
-    .page.flipped {
-
-      transform: rotateY(180deg);
-
-    }
-
-
-
-    .front, .back {
-
-      position: absolute;
-
-      width: 100%;
-
-      height: 100%;
-
-      backface-visibility: hidden;
-
-      border-radius: 10px;
-
-      overflow-y: auto;
-
-      padding: 20px;
-
-      font-size: 1.2rem;
-
-      line-height: 1.8;
-
-    }
-
-
-
-    .front {
-
-      background-color: rgba(0, 0, 0, 0.4);
-
-    }
-
-
-
-    .back {
-
-      background: rgba(0, 0, 0, 0.9) url('agnosia.jpg') no-repeat center center;
-
-      background-size: cover;
-
-      transform: rotateY(180deg);
-
-      color: #ffa500;
-
-      display: flex;
-
-      align-items: center;
-
-      justify-content: center;
-
-      font-size: 1.5rem;
-
-    }
-
-
-
-    .highlight {
-
-      background-color: rgba(255, 165, 0, 0.3);
-
-      color: #ffa500;
-
-      font-weight: bold;
-
-      padding: 4px;
-
-      border-radius: 5px;
-
-    }
-
-
-
-    .controls {
-
-      display: flex;
-
-      gap: 10px;
-
-      justify-content: center;
-
-      flex-wrap: wrap;
-
+    h6 {
+      color: #c0c0c0;
       margin-top: 20px;
-
+      margin-bottom: 10px;
+      font-size: 1.5em;
+      background: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente para melhor leitura */
+      padding: 10px;
+      border-radius: 10px;
     }
 
+    #lyrics {
+      flex-grow: 1;
+      overflow-y: auto;
+      text-align: center;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      margin-right: 20px;
+      background: rgba(0, 0, 0, 0.4); /* Fundo para dar contraste nas letras */
+      border-radius: 15px;
+    }
 
+    .line {
+      margin: 15px 0;
+      font-size: 1.4em;
+      line-height: 1.6;
+    }
+
+    .current-line {
+      color: #FFA500;
+      font-weight: bold;
+      font-size: 1.6em;
+    }
+
+    #audio-container {
+      position: fixed;
+      top: 50%;
+      right: 20px;
+      transform: translateY(-50%);
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      z-index: 20;
+    }
 
     button {
-
-      padding: 10px 20px;
-
-      border: none;
-
-      font-size: 1rem;
-
-      border-radius: 8px;
-
+      background: none;
+      color: #c0c0c0;
+      border: 2px solid #c0c0c0;
+      padding: 12px 20px;
+      font-size: 1.1em;
+      border-radius: 25px;
       cursor: pointer;
-
-    }
-
-
-
-    .play-button { background-color: #ffa500; }
-
-    .pause-button { background-color: #ff6347; }
-
-    .stop-button { background-color: #20b2aa; }
-
-
-
-    .volume-control {
-
-      display: flex;
-
-      justify-content: center;
-
-      align-items: center;
-
-      margin-top: 10px;
-
-      gap: 10px;
-
-    }
-
-
-
-    .volume-control input {
-
-      width: 200px;
-
-    }
-
-
-
-    #footer {
-
-      background: rgba(0, 0, 0, 0.7);
-
-      padding: 10px;
-
-      margin-top: 20px;
-
-      border-radius: 10px;
-
-    }
-
-
-
-    #marquee {
-
-      display: flex;
-
-      justify-content: center;
-
-      align-items: center;
-
-      overflow: hidden;
-
+      transition: background-color 0.3s ease;
+      width: 100px;
       text-align: center;
-
-      margin-top: 10px;
-
-      white-space: nowrap;
-
+      box-sizing: border-box;
     }
 
-
-
-    #marquee div {
-
-      animation: marquee 25s linear infinite;
-
+    button:hover {
+      background-color: #333;
     }
 
-
-
-    @keyframes marquee {
-
-      0%   { transform: translateX(100%); }
-
-      100% { transform: translateX(-100%); }
-
+    button.play-button {
+      color: #FFA500;
+      border-color: #FFA500;
+    }
+/* Marca d'água um pouco mais visível */
+        .watermark {
+            position: fixed;
+            top: 5px;
+            left: 5px;
+            color: rgba(128, 128, 128, 0.3); /* Aumento sutil na opacidade */
+            font-size: 0.9em;
+            font-weight: bold;
+            z-index: 1;
+            pointer-events: none;
+    audio {
+      width: 80%;
+      max-width: 400px;
+      display: none;
     }
 
+    #logo-footer {
+      display: none;
+    }
+
+    #volume-control {
+      -webkit-appearance: none;
+      width: 100px;
+      height: 6px;
+      background: #c0c0c0;
+      border-radius: 5px;
+      outline: none;
+      cursor: pointer;
+    }
   </style>
-
 </head>
-
 <body>
+  <h6>Livres para viver</h6>
+  <div id="lyrics"></div>
 
-  <div class="watermark">DorvalLuz</div>
-
-
-
-  <h1>Livres para viver<br>DorvalLuz</h1>
-
-
-
-  <div class="page-container">
-
-    <div class="page" id="page-flip">
-
-      <div class="front" id="karaoke"></div>
-
-      <div class="back"></div>
-
-    </div>
-
+  <div id="audio-container">
+    <button class="play-button" onclick="audio.play()">Play</button>
+    <button onclick="audio.pause()">Pausar</button>
+    <button onclick="audio.currentTime = 0; audio.pause()">Parar</button>
+    <input type="range" id="volume-control" min="0" max="1" step="0.01" value="1">
   </div>
 
-
-
-  <audio id="audio" controls style="display: none">
-
-    <source src="Livres para viver.mp3" type="audio/mpeg">
-
-    Seu navegador não suporta áudio HTML5.
-
-  </audio>
-
-
-
-  <div id="footer">
-
-    <div class="controls">
-
-      <button class="play-button" onclick="audio.play()">▶️ Play</button>
-
-      <button class="pause-button" onclick="audio.pause()">⏸️ Pausar</button>
-
-      <button class="stop-button" onclick="audio.pause(); audio.currentTime = 0;">⏹️ Parar</button>
-
-    </div>
-
-
-
-    <div class="volume-control">
-
-      <label for="volume">Volume:</label>
-
-      <input type="range" id="volume" min="0" max="1" step="0.01" value="1">
-
-    </div>
-
-
-
-    <div class="controls" style="margin-top: 10px;">
-
-      <button onclick="karaokeDiv.scrollBy(0, -50)">⬆️ Subir</button>
-
-      <button onclick="karaokeDiv.scrollBy(0, 50)">⬇️ Descer</button>
-
-    </div>
-
-
-
-    <div class="controls">
-
-      <button onclick="togglePage()">🔄 Virar Página</button>
-
-    </div>
-
-  </div>
-
-
-
+  <audio id="audio" src="Livres para viver.mp3"></audio>
+<div class="watermark">DorvalLuz</div>
   <script>
-
     const audio = document.getElementById('audio');
-
-    const volumeSlider = document.getElementById('volume');
-
-    const karaokeDiv = document.getElementById('karaoke');
-
-    const page = document.getElementById('page-flip');
-
-
-
-    const lrc = `
+    const lyricsContainer = document.getElementById('lyrics');
+    document.getElementById('volume-control').addEventListener('input', function() {
+      audio.volume = this.value;
+    });
+   // Karaokê
+        const lrc = `
+[ti:Livres para viver]
+[ar:DorvalLuz]
+[al:]
+[la:]
+[re:LRCStudio]
+[by:]
+[ve:1.0.18]
 
 [00:00.00]
-
 [00:10.32]Just be just be just be freedom and go ahead
-
+[00:29.94]
 [00:31.23]Olho para a rua, um tédio como a sua
-
 [00:34.61]Preciso trabalhar
-
 [00:36.54]Pressão e sufoco são as regras do desgosto
-
 [00:39.60]É hora de mudar
-
 [00:42.18]Bêbados nos bares fugindo de seus lares
-
 [00:45.40]É pressão
-
 [00:47.49]Silêncio na esquina chora uma menina
-
 [00:50.55]De solidão
-
+[00:54.24]
 [00:63.25]Just be just be just be freedom and go ahead
-
+[01:25.65]
 [01:25.73]Quando não se quer ser livre pra viver
-
 [01:30.45]É viver trancado no seu mau humor
-
-[01:64.90]by DorvalLuz
-
-`;
+[01:35.15]
+[01:64.90]by DorvalLuz        `;
 
 
+    const lines = [];
 
-    function parseLRC(lrc) {
-
-      return lrc.trim().split('\n').map(line => {
-
-        const match = line.match(/\[(\d{2}):(\d{2})\.(\d{2})\](.+)/);
-
-        if (!match) return null;
-
-        const [, min, sec, cent, text] = match;
-
-        const time = parseInt(min) * 60 + parseInt(sec) + parseInt(cent) / 100;
-
-        return { time, text: text.trim() };
-
-      }).filter(Boolean);
-
-    }
-
-
-
-    const lines = parseLRC(lrc);
-
-
-
-    lines.forEach((line, index) => {
-
-      const div = document.createElement('div');
-
-      div.id = `line-${index}`;
-
-      div.textContent = line.text;
-
-      karaokeDiv.appendChild(div);
-
+    lrc.trim().split('\n').forEach(line => {
+      const match = line.match(/\[(\d+):(\d+\.\d+)\](.+)/);
+      if (match) {
+        const time = parseInt(match[1]) * 60 + parseFloat(match[2]);
+        const text = match[3].trim();
+        lines.push({ time, text });
+      }
     });
 
+    lines.forEach(line => {
+      const div = document.createElement('div');
+      div.className = 'line';
+      div.textContent = line.text;
+      lyricsContainer.appendChild(div);
+      line.element = div;
+    });
 
-
-    function updateLyricsHighlight() {
-
+    audio.addEventListener('timeupdate', () => {
       const currentTime = audio.currentTime;
+      let currentIndex = 0;
 
       for (let i = 0; i < lines.length; i++) {
-
-        const line = lines[i];
-
-        const nextLine = lines[i + 1];
-
-        const lineElem = document.getElementById(`line-${i}`);
-
-        if (currentTime >= line.time && (!nextLine || currentTime < nextLine.time)) {
-
-          document.querySelectorAll('#karaoke div').forEach(el => el.classList.remove('highlight'));
-
-          lineElem.classList.add('highlight');
-
-          lineElem.scrollIntoView({ behavior: 'smooth', block: 'center' });
-
-          break;
-
+        if (lines[i].time <= currentTime) {
+          currentIndex = i;
         }
-
       }
 
-    }
-
-
-
-    function togglePage() {
-
-      page.classList.toggle('flipped');
-
-    }
-
-
-
-    audio.addEventListener('timeupdate', updateLyricsHighlight);
-
-    volumeSlider.addEventListener('input', () => {
-
-      audio.volume = volumeSlider.value;
-
+      lines.forEach((line, i) => {
+        line.element.classList.remove('current-line');
+        if (i === currentIndex) {
+          line.element.classList.add('current-line');
+          line.element.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
+        }
+      });
     });
-
-
-
-    document.addEventListener('contextmenu', e => e.preventDefault());
-
   </script>
-<script>
-  document.addEventListener('contextmenu', function (e) {
-    e.preventDefault();
-  });
-</script>
 </body>
-
 </html>
